[FE][] chore: back 재설치
